# Vire

./: CMakeLists.txt  README.md  README.rst
documentation/: CMakeLists.txt  InstallationGuide.md.in  Mainpage.md  vire_doxygen.conf.in
documentation/architecture/: arch.rst
documentation/installation/: build14.04.sh  build16.04.sh
documentation/installation/BxJsontools/: GNUmakefile  bxjsontools-master_xubuntu16.04_install.rst
documentation/installation/Protobuf/: GNUmakefile  protobuf-3.0.0_xubuntu16.04_install.rst
documentation/installation/Xubuntu14.04-a/: GNUmakefile  vire-trunk_xubuntu14.04-a_report.rst
documentation/installation/Xubuntu16.04-a/: GNUmakefile  vire-trunk_xubuntu16.04_report.rst
examples/cms/ex01/: CMakeLists.txt  README.rst  payload2protobuf.cxx
plugins/: CMakeLists.txt  README.rst  _make_list_of_plugins_resource_files
plugins/Vire_CMSLAPPInterface/: CMakeLists.txt  README.rst
plugins/Vire_CMSLAPPInterface/resources/: _resources.cmake
plugins/Vire_CMSLAPPInterface/source/: CMakeLists.txt
plugins/Vire_MOS/: CMakeLists.txt  README.rst
plugins/Vire_MOS/resources/: _resources.cmake
plugins/Vire_MOS/source/: CMakeLists.txt
plugins/Vire_RabbitMQ/: CMakeLists.txt  README.rst
plugins/Vire_RabbitMQ/documentation/: rabbitmq.rst
plugins/Vire_RabbitMQ/source/: CMakeLists.txt
source/: CMakeLists.txt  Vire.1.md  Vire.1.md~
source/java/: CMakeLists.txt  README.rst  pack_java_src.sh
source/java/vire/: Manifest.txt  hello_vire.java  protobufable_interface.java  tree_dumpable_interface.java  version.java.in  vire.java
source/vire/: CMakeLists.txt  base_object_protobuf.h  exitcodes.h  plugin.cc.in  plugin.h  resource_files.cc.in  resource_files.h  the_introspectable.cc  the_serializable.cc  version.cc  version.h.in  vire.cc.in  vire.h  vire_binreloc.c  vire_config.h.in
source/vire/auth/: Lists.cmake  credentials.cc  credentials.h  crypto.cc  crypto.h  manager-reflect.h  manager.cc  manager.h  password_entry.cc  password_entry.h  the_introspectable-inc.h  utils.cc  utils.h
source/vire/automaton/: Lists.cmake  base_automaton.cc  base_automaton.h  utils.cc  utils.h
source/vire/cms/: Lists.cmake  application.cc  application.h  argument_error-serial.ipp  argument_error.cc  argument_error.h  base_image.cc  base_image.h  base_rpc_worker.cc  base_rpc_worker.h  connection_failure-serial.ipp  connection_failure.cc  connection_failure.h  connection_request-serial.ipp  connection_request.cc  connection_request.h  connection_success-serial.ipp  connection_success.cc  connection_success.h  device_image.cc  device_image.h  device_status_change-serial.ipp  device_status_change.cc  device_status_change.h  device_status_change_event.cc  device_status_change_event.h  disconnection_failure-serial.ipp  disconnection_failure.cc  disconnection_failure.h  disconnection_request-serial.ipp  disconnection_request.cc  disconnection_request.h  disconnection_success-serial.ipp  disconnection_success.cc  disconnection_success.h  experiment_image_registry.cc  experiment_image_registry.h  image.cc  image.h  image_registry.cc  (+93 more)
source/vire/cmsclient/: Lists.cmake  client.cc  client.h  connection.h  default_negotiation_worker.cc  default_negotiation_worker.h  negotiation.cc  negotiation.h  negotiation_service.cc  negotiation_service.h  server_infos.cc  server_infos.h  session_connection_parameters.cc  session_connection_parameters.h  session_manager.cc  session_manager.h  setup_infos.cc  setup_infos.h  setup_infos_tui.cc  setup_infos_tui.h
source/vire/cmsserver/: Lists.cmake  agenda.cc  agenda.h  base_client_connection_use_case.cc  base_client_connection_use_case.h  base_use_case.cc  base_use_case.h  client_connection.cc  client_connection.h  client_connection_infos.h  dummy_process.cc  dummy_process.h  error.h  gate.cc  gate.h  gate_negociation_rpc_worker.cc  gate_negociation_rpc_worker.h  gate_rpc.cc  gate_rpc.h  lock_use_case.cc  lock_use_case.h  parallel_use_case.cc  parallel_use_case.h  parametrized_resource_specifications.cc  parametrized_resource_specifications.h  process_info.cc  process_info.h  resource_cardinality-serial.ipp  resource_cardinality.cc  resource_cardinality.h  resource_pool.cc  resource_pool.h  running.cc  running.h  sc_driver.cc  sc_driver.h  sc_info.cc  sc_info.h  sc_manager.cc  sc_manager.h  (+65 more)
source/vire/cmssubcontractor/: Lists.cmake  sc.cc  sc.h  sc_description.cc  sc_description.h
source/vire/com/: Lists.cmake  README.rst  access_hub.cc  access_hub.h  access_profile.cc  access_profile.h  actor.cc  actor.h  addressing.cc  addressing.h  base_plug.cc  base_plug.h  base_port.cc  base_port.h  boost_serialization_encoding_driver.cc  boost_serialization_encoding_driver.h  client_rpc_plug.cc  client_rpc_plug.h  domain.cc  domain.h  domain_builder.cc  domain_builder.h  event_emitter_plug.cc  event_emitter_plug.h  event_listener_plug.cc  event_listener_plug.h  i_encoding_driver.cc  i_encoding_driver.h  i_event_emitter_plug.cc  i_event_emitter_plug.h  i_event_listener_plug.cc  i_event_listener_plug.h  i_service_client_plug.cc  i_service_client_plug.h  i_service_server_plug.cc  i_service_server_plug.h  i_transport_driver.cc  i_transport_driver.h  i_transport_manager.cc  i_transport_manager.h  (+20 more)
source/vire/detail/: vire_library.cc  vire_library.h
source/vire/device/: Lists.cmake  base_datapoint_model.cc  base_datapoint_model.h  base_device_model.cc  base_device_model.h  base_electronics_crate_model.cc  base_electronics_crate_model.h  base_electronics_module_model.cc  base_electronics_module_model.h  base_electronics_rack_model.cc  base_electronics_rack_model.h  base_firmware_model.cc  base_firmware_model.h  base_integrated_circuit_model.cc  base_integrated_circuit_model.h  base_link_model.cc  base_link_model.h  base_method_port_model.cc  (+86 more)
source/virecmsclient/: CMakeLists.txt  README.rst  virecmsclientmain.cxx
source/virecmsserver/: CMakeLists.txt  README.rst  virecmsservermain.cxx
source/vireinspector/: CMakeLists.txt  README.rst  vireinspector.cc  vireinspector.h  vireinspectormain.cxx
source/virequery/: CMakeLists.txt  virequery.in
(+1085 files in other folders)
